# frogcast_transcription

./: README.md  pyproject.toml
frogcast_transcription/: definitions.py  gui_app.py  main.py  transcribe_audio.py  transcribe_audio_whisper.py
